src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Valspar Master Lead Process</fullName>
        <description>Master lead process for Valspar.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Transferred</fullName>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approved_Applicator__c</fullName>
        <label>Approved Applicator</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Laser Sintering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__DUNS__c</fullName>
        <label>DUNS</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated_Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign the Distributor (from existing Accounts) this Lead will most likely purchase from.</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Revenue__c</fullName>
        <description>Estimated Annual Revenue for Opportunity Valspar actual sales (not distributors total potential)</description>
        <inlineHelpText>Estimated Annual Revenue/Purchases for this Lead (will convert to Opportunity).  Denotes Valspar actual sales (not distributors total potential).</inlineHelpText>
        <label>Est Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <label>Geo Region</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia / London / Channel Islands(3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSIDE SALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNATIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent / Sussex / Surrey /Hants/ Ireland(4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID-ATLANTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle England &amp; Wales(6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTIPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East / North West / Isle of Man(2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROCKY MOUNTAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland / North England(1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West / South Wales(5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Yorkshire/ Lincs/ Notts/Staffs / North Wales(7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Applicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User/Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor/Jobber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curtain Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Address1__c</fullName>
        <description>Lead Mailing Address 1</description>
        <label>Mail Address1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Address2__c</fullName>
        <description>Lead Mailing Address2</description>
        <label>Mail Address2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_City__c</fullName>
        <description>Lead Mailing Address City</description>
        <label>Mail City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Country__c</fullName>
        <label>Mail Country</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_State__c</fullName>
        <description>Leadin Mailing Address State</description>
        <label>Mail State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Zip__c</fullName>
        <description>Lead Mailing Address Zip code</description>
        <label>Mail Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Request_to_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Request to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>These are the market segments for each business unit. This will allow for lead and opportunity reporting by market segment.</description>
        <label>Market Segment</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>2 Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhesives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Ends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond the Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Alum Trim Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Coater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Entry Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Garage Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Lighting Fixture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Metal Building Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Plastisol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Roof Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collision Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete &amp; Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Message</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Project City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Country__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Project Country</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Project Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Project State</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <description>Coil Web to Lead</description>
        <label>Project Timeline</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>SIC Code</description>
        <label>SIC Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel partner stores</description>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Lowes Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Store)</relationshipLabel>
        <relationshipName>Lead_to_Cons_Store</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>BUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cazoomi__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AAHOA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Store__c</columns>
        <columns>Est_Annual_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Valspar_Master_Lead_Record_Type</value>
        </filters>
        <label>AAHOA Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_Lowes_BU_Admin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AAOGO_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.RATING</columns>
        <columns>Store__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Valspar_Master_Lead_Record_Type</value>
        </filters>
        <label>AAOGO Leads</label>
        <sharedTo>
            <role>Cons_Lowes_Division_Southeast</role>
            <role>Cons_Lowes_Executives_and_Managers</role>
            <role>Cons_Lowes_Region_30</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZAMA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Store__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Valspar_Master_Lead_Record_Type</value>
        </filters>
        <label>AZAMA Leads</label>
        <sharedTo>
            <role>Cons_Lowes_BU_Admin</role>
            <role>Cons_Lowes_Division_Southwest</role>
            <role>Cons_Lowes_Executives_and_Managers</role>
            <role>Cons_Lowes_Region_28</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aerosol_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Aerosol</value>
        </filters>
        <label>Aerosol Leads</label>
        <sharedTo>
            <role>ConsAeroExecutivesManagers</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_Ready_to_Convert</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Manager__c</columns>
        <columns>Manager_Request_to_Convert__c</columns>
        <columns>Geo_Region__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manager_Request_to_Convert__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Transferred</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <label>All Leads Ready to Convert</label>
        <sharedTo>
            <role>AutoBUAdmin</role>
            <role>AutomotiveExecutivesandManagers_NA</role>
            <role>Automotive_Executives_and_Managers</role>
            <role>Automotive_Executives_and_Managers_Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Automotive_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Geo_Region__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Manager_Request_to_Convert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <label>Automotive Leads</label>
        <sharedTo>
            <role>AutoBUAdmin</role>
            <role>Auto_BU_Admin_EMEAI</role>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coil_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Coil/Extrusion</value>
        </filters>
        <label>Coil Leads</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_DB_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer DB</value>
        </filters>
        <label>Consumer DB Leads</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Container_Market_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Segment__c</field>
            <operation>contains</operation>
            <value>Container</value>
        </filters>
        <label>Container Market Leads</label>
    </listViews>
    <listViews>
        <fullName>EPS_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>EPS</value>
        </filters>
        <label>EPS Leads</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GCAA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Store__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Valspar_Master_Lead_Record_Type</value>
        </filters>
        <label>GCAA Leads</label>
        <sharedTo>
            <role>Cons_Lowes_Division_Southeast</role>
            <role>Cons_Lowes_Executives_and_Managers</role>
            <role>Cons_Lowes_Region_35</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GI_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <label>GI Leads</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>GIBUAdmin</role>
            <role>GI_Wood_Executives_Managers</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GI_Leads_by_geo_region</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>Geo_Region__c</field>
            <operation>equals</operation>
            <value>EMEAI</value>
        </filters>
        <label>GI Leads by Geo Region</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GI_Leads_by_sales_rep</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Zwick</value>
        </filters>
        <label>GI Leads by sales rep</label>
        <sharedTo>
            <role>ExecutiveManagement</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IBS_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Store__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Est_Annual_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Valspar_Master_Lead_Record_Type</value>
        </filters>
        <label>IBS Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_Lowes_BU_Admin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Valspar_Master_Lead_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Valspar Master Lead Process</businessProcess>
        <description>Master lead record type for Valspar.</description>
        <label>Valspar Master Lead Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>